# message_traits

./: CMakeLists.txt  Dockerfile  README.md
libs/dispatcher/: notifier.hpp
libs/dispatcher/include/: message_traits.hpp
src/: main.cpp
